Set additional container resources

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,26 @@ image: repo.htl-md.schule:5003/gradle:jdk17-alpine
 
 variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.internal.launcher.welcomeMessageEnabled=false"
+  KUBERNETES_CPU_REQUEST: "5"
+  KUBERNETES_CPU_LIMIT: "10"
+  KUBERNETES_MEMORY_REQUEST: "4Gi"
+  KUBERNETES_MEMORY_LIMIT: "8Gi"
+  KUBERNETES_EPHEMERAL_STORAGE_REQUEST: "2Gi"
+  KUBERNETES_EPHEMERAL_STORAGE_LIMIT: "5Gi"
+
+  KUBERNETES_HELPER_CPU_REQUEST: "5"
+  KUBERNETES_HELPER_CPU_LIMIT: "10"
+  KUBERNETES_HELPER_MEMORY_REQUEST: "4Gi"
+  KUBERNETES_HELPER_MEMORY_LIMIT: "8Gi"
+  KUBERNETES_HELPER_EPHEMERAL_STORAGE_REQUEST: "2Gi"
+  KUBERNETES_HELPER_EPHEMERAL_STORAGE_LIMIT: "5Gi"
+
+  KUBERNETES_SERVICE_CPU_REQUEST: "3"
+  KUBERNETES_SERVICE_CPU_LIMIT: "5"
+  KUBERNETES_SERVICE_MEMORY_REQUEST: "2Gi"
+  KUBERNETES_SERVICE_MEMORY_LIMIT: "4Gi"
+  KUBERNETES_SERVICE_EPHEMERAL_STORAGE_REQUEST: "512Mi"
+  KUBERNETES_SERVICE_EPHEMERAL_STORAGE_LIMIT: "1Gi"
 
 cache:
   key: $CI_COMMIT_REF_SLUG
