--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,15 +23,8 @@ variables:
   KUBERNETES_SERVICE_EPHEMERAL_STORAGE_REQUEST: "512Mi"
   KUBERNETES_SERVICE_EPHEMERAL_STORAGE_LIMIT: "1Gi"
 
-cache:
-  key: $CI_COMMIT_REF_SLUG
-  paths:
-    - "$CI_PROJECT_DIR/.gradle"
-    - build
-    - plugin/api/build
-    - plugin/bukkit/build
-    - example/kotlin/build
-    - example/java/build
+  FF_USE_FASTZIP: "true"
+  CACHE_COMPRESSION_LEVEL: "fast"
 
 before_script:
   - export GRADLE_USER_HOME=$CI_PROJECT_DIR/.gradle
@@ -41,12 +34,32 @@ build:
   stage: build
   script:
     - gradle assemble
+  cache:
+    key: $CI_COMMIT_REF_SLUG
+    paths:
+      - "$CI_PROJECT_DIR/.gradle"
+      - build
+      - plugin/api/build
+      - plugin/bukkit/build
+      - example/kotlin/build
+      - example/java/build
+    policy: pull-push
 
 test:
   stage: test
   needs: ["build"]
   script:
     - gradle check
+  cache:
+    key: $CI_COMMIT_REF_SLUG
+    paths:
+      - "$CI_PROJECT_DIR/.gradle"
+      - build
+      - plugin/api/build
+      - plugin/bukkit/build
+      - example/kotlin/build
+      - example/java/build
+    policy: pull
 
 deploy:
   stage: deploy
@@ -57,7 +70,17 @@ deploy:
     expire_in: 1 week
     name: "jar-files"
     paths:
-      - plugin/bukkit/build/libs/*.jar
+      - plugin/bukkit/build/libs/*.jar#
+  cache:
+    key: $CI_COMMIT_REF_SLUG
+    paths:
+      - "$CI_PROJECT_DIR/.gradle"
+      - build
+      - plugin/api/build
+      - plugin/bukkit/build
+      - example/kotlin/build
+      - example/java/build
+    policy: pull
   only:
     - main
     - master
