--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ variables:
   KUBERNETES_SERVICE_EPHEMERAL_STORAGE_LIMIT: "1Gi"
 
   FF_USE_FASTZIP: "true"
-  CACHE_COMPRESSION_LEVEL: "fast"
+#  CACHE_COMPRESSION_LEVEL: "fast"
 
 .gradle-cache: &gradle-cache
   key:
