--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,8 +23,8 @@ variables:
   KUBERNETES_SERVICE_EPHEMERAL_STORAGE_REQUEST: "512Mi"
   KUBERNETES_SERVICE_EPHEMERAL_STORAGE_LIMIT: "1Gi"
 
-  FF_USE_FASTZIP: "true"
-#  CACHE_COMPRESSION_LEVEL: "fast"
+#  FF_USE_FASTZIP: "true"
+  CACHE_COMPRESSION_LEVEL: "fast"
 
 .gradle-cache: &gradle-cache
   key:
