--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ variables:
   KUBERNETES_SERVICE_EPHEMERAL_STORAGE_REQUEST: "512Mi"
   KUBERNETES_SERVICE_EPHEMERAL_STORAGE_LIMIT: "1Gi"
 
-#  FF_USE_FASTZIP: "true"
+  FF_USE_FASTZIP: 1
   CACHE_COMPRESSION_LEVEL: "fast"
 
 .gradle-cache: &gradle-cache
