--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ deploy:
   stage: deploy
   needs: ["test"]
   script:
-    - gradle :solarsystem:plugin:bukkit:shadowJar
+    - gradle :plugin:bukkit:shadowJar
   artifacts:
     expire_in: 1 week
     name: "jar-files"
