--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -11,8 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-
       - name: Run build with Gradle Wrapper
-        run: ./gradlew publishSolarSystemPublicationToHangar
+        run: gradle publishSolarSystemPublicationToHangar
         env:
           HANGAR_SECRET: ${{secrets.HANGAR_KEY}}
