--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -24,5 +24,5 @@ jobs:
         run: gradle publishSolarSystemPublicationToHangar
         env:
           HANGAR_SECRET: ${{secrets.HANGAR_KEY}}
-          HANGAR_CHANNEL: "unstable"
+          HANGAR_CHANNEL: "Unstable"
           SHA_SHORT: ${{steps.vars.outputs.sha_short}}
