--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -20,9 +20,15 @@ jobs:
           java-version: 17
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Run build with Gradle Wrapper
+      - name: Publish to hangar
         run: gradle publishSolarSystemPublicationToHangar
         env:
           HANGAR_SECRET: ${{secrets.HANGAR_KEY}}
           HANGAR_CHANNEL: "Unstable"
+          SHA_SHORT: ${{steps.vars.outputs.sha_short}}
+      - name: Publish to modrinth
+        run: gradle modrinth
+        env:
+          MODRINTH_TOKEN: ${{secrets.MODRITH_KEY}}
+          MODRINTH_CHANNEL: "alpha"
           SHA_SHORT: ${{steps.vars.outputs.sha_short}}
